Fixing reveal text width causing jumps and not looking pretty

--- a/bin/core-files/css/C_Engine.css
+++ b/bin/core-files/css/C_Engine.css
@@ -977,7 +977,6 @@ ul.no-indent {
 	font-size: 12pt !important;
 	color: #000000;
 	opacity: .1;
-	max-width: 690px;
 }
 
 .revealText p{
